--- a/blog.html
+++ b/blog.html
@@ -246,27 +246,27 @@
                   <div class="col-4">
                       <h3>head</h3>
                       <ul>
-                          <li><a href="#">リアライズサイト会社概要</a></li>
-                          <li><a href="#">会社概要</a></li>
-                          <li><a href="#">どんな会社？？</a></li>
+                          <li><a class="text-white" href="#">リアライズサイト会社概要</a></li>
+                          <li><a class="text-white" href="#">会社概要</a></li>
+                          <li><a class="text-white" href="#">どんな会社？？</a></li>
                       </ul>
                     </div>
                   <div class="col-6">
                       <h3>section</h3>
-                      <ul>
-                          <li><a href="#">aaaa</a></li>
-                          <li><a href="#">bbbb</a></li>
-                          <li><a href="#">cccc</a></li>
-                          <li><a href="#">dddd</a></li>
-                          <li><a href="#">eeee</a></li>
+                      <ul class="footer-nav">
+                          <li><a class="text-white" href="#">aaaa</a></li>
+                          <li><a class="text-white" href="#">bbbb</a></li>
+                          <li><a class="text-white" href="#">cccc</a></li>
+                          <li><a class="text-white" href="#">dddd</a></li>
+                          <li><a class="text-white" href="#">eeee</a></li>
                       </ul>
                     </div>
                   <div class="col-2">
                       <h3>footer</h3>
                       <ul>
-                          <li><a href="https://twitter.com/login/error?username_or_email=09042773488&redirect_after_login=%2F"></a></li>
-                          <li><a href="https://www.facebook.com/"></a></li>
-                          <li><a href=""></a></li>
+                          <li><a class="text-white" href="https://twitter.com/login/error?username_or_email=09042773488&redirect_after_login=%2F">テキスト</a></li>
+                          <li><a class="text-white" href="https://www.facebook.com/">テキスト</a></li>
+                          <li><a class="text-white" href="">テキスト</a></li>
                       </ul>
                     </div>
               </div>
