--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/realize.css">
     <link rel="icon" type="image/x-icon" href="img/realize__icon.png">
-    
-    
     <title>リアライズサイト</title>
 </head>
 <body>
@@ -123,6 +121,7 @@
 
     <footer class="footer">
         <p>&copy;2021 Realize Corporation</p>
+        <p>テスト</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
